--- a/draft/src/main/res/layout/left_attach_button.xml
+++ b/draft/src/main/res/layout/left_attach_button.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:padding="10dp"
         android:src="@drawable/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
 </FrameLayout>
