--- a/draft/src/main/res/layout/canvas_draft_activity.xml
+++ b/draft/src/main/res/layout/canvas_draft_activity.xml
@@ -11,13 +11,23 @@
         android:layout_height="60dp"
         android:background="@color/white">
 
-        <ImageView
-            android:id="@+id/iv_close"
+        <RelativeLayout
+            android:visibility="visible"
+            android:id="@+id/rl_back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/close_selector" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_centerInParent="true"
+                android:id="@+id/iv_close"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/close_selector" />
+
+        </RelativeLayout>
+
+
 
         <TextView
             android:layout_width="wrap_content"
